--- a/src/app/JTableTut.form
+++ b/src/app/JTableTut.form
@@ -337,7 +337,7 @@
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="supervisedSelector" max="32767" attributes="0"/>
-                          <Component id="supervisedCardConfig" alignment="0" max="32767" attributes="0"/>
+                          <Component id="supervisedCardConfig" alignment="0" pref="697" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
@@ -381,7 +381,7 @@
                         <Component class="javax.swing.JComboBox" name="supervisedComboBox">
                           <Properties>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Decision Tree&quot;, &quot;Naive Bayes&quot;, &quot;Supervised2&quot;, &quot;Supervised3&quot; })" type="code"/>
+                              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;Decision Tree&quot;, &quot;Naive Bayes&quot;, &quot;Logistic Regression&quot;})" type="code"/>
                             </Property>
                           </Properties>
                           <AuxValues>
@@ -533,7 +533,7 @@
                                       </Group>
                                       <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                                       <Component id="generateDecisionTreeButton" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="364" max="32767" attributes="0"/>
+                                      <EmptySpace pref="327" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -608,6 +608,146 @@
                             </Component>
                           </SubComponents>
                         </Container>
+                        <Container class="javax.swing.JPanel" name="logisticRegressionConfig">
+                          <Constraints>
+                            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
+                              <CardConstraints cardName="card5"/>
+                            </Constraint>
+                          </Constraints>
+
+                          <Layout>
+                            <DimensionLayout dim="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <EmptySpace min="0" pref="873" max="32767" attributes="0"/>
+                                  <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <EmptySpace min="0" pref="18" max="32767" attributes="0"/>
+                                          <Component id="naiveBayesConfig1" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="19" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                            </DimensionLayout>
+                            <DimensionLayout dim="1">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <EmptySpace min="0" pref="697" max="32767" attributes="0"/>
+                                  <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
+                                      <Group type="102" attributes="0">
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                          <Component id="naiveBayesConfig1" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                              </Group>
+                            </DimensionLayout>
+                          </Layout>
+                          <SubComponents>
+                            <Container class="javax.swing.JPanel" name="naiveBayesConfig1">
+
+                              <Layout>
+                                <DimensionLayout dim="0">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="bayesLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Group type="103" alignment="0" groupAlignment="1" attributes="0">
+                                                  <Component id="generateLogisticRegression" alignment="1" min="-2" max="-2" attributes="0"/>
+                                                  <Group type="102" alignment="1" attributes="0">
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Group type="102" alignment="1" attributes="0">
+                                                              <Component id="logisticRegressionLabe1" min="-2" max="-2" attributes="0"/>
+                                                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                                                          </Group>
+                                                          <Group type="102" attributes="0">
+                                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                                  <Component id="logisticRegressionLabe2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                                  <Component id="outputLabel1" min="-2" max="-2" attributes="0"/>
+                                                              </Group>
+                                                              <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                                                          </Group>
+                                                      </Group>
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="logisticRegressionTextField2" max="32767" attributes="0"/>
+                                                          <Component id="logisticRegressionTextField1" alignment="0" pref="150" max="32767" attributes="0"/>
+                                                          <Component id="logisticRegressionOutputFileText" alignment="0" max="32767" attributes="0"/>
+                                                      </Group>
+                                                  </Group>
+                                              </Group>
+                                          </Group>
+                                          <EmptySpace pref="472" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                </DimensionLayout>
+                                <DimensionLayout dim="1">
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                                          <Component id="bayesLabel1" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="logisticRegressionLabe1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="logisticRegressionTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="logisticRegressionLabe2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="logisticRegressionTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="logisticRegressionOutputFileText" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="outputLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="generateLogisticRegression" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace pref="463" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                </DimensionLayout>
+                              </Layout>
+                              <SubComponents>
+                                <Component class="javax.swing.JLabel" name="bayesLabel1">
+                                  <Properties>
+                                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                                      <Font name="Tahoma" size="18" style="1"/>
+                                    </Property>
+                                    <Property name="text" type="java.lang.String" value="Logistic Regression"/>
+                                  </Properties>
+                                </Component>
+                                <Component class="javax.swing.JLabel" name="logisticRegressionLabe1">
+                                  <Properties>
+                                    <Property name="text" type="java.lang.String" value="Number of Classes:"/>
+                                  </Properties>
+                                </Component>
+                                <Component class="javax.swing.JLabel" name="outputLabel1">
+                                  <Properties>
+                                    <Property name="text" type="java.lang.String" value="Output File:"/>
+                                  </Properties>
+                                </Component>
+                                <Component class="javax.swing.JTextField" name="logisticRegressionTextField1">
+                                </Component>
+                                <Component class="javax.swing.JTextField" name="logisticRegressionOutputFileText">
+                                </Component>
+                                <Component class="javax.swing.JButton" name="generateLogisticRegression">
+                                  <Properties>
+                                    <Property name="text" type="java.lang.String" value="Generate"/>
+                                  </Properties>
+                                  <Events>
+                                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="generateLogisticRegressionActionPerformed"/>
+                                  </Events>
+                                </Component>
+                                <Component class="javax.swing.JLabel" name="logisticRegressionLabe2">
+                                  <Properties>
+                                    <Property name="text" type="java.lang.String" value="Split:"/>
+                                  </Properties>
+                                </Component>
+                                <Component class="javax.swing.JTextField" name="logisticRegressionTextField2">
+                                </Component>
+                              </SubComponents>
+                            </Container>
+                          </SubComponents>
+                        </Container>
                         <Container class="javax.swing.JPanel" name="naiveBayesConfig">
                           <Constraints>
                             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
@@ -658,7 +798,7 @@
                                       </Group>
                                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Component id="generateBayesButton" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="487" max="32767" attributes="0"/>
+                                      <EmptySpace pref="477" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -762,7 +902,7 @@
                                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="618" max="32767" attributes="0"/>
+                                      <EmptySpace pref="591" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -843,7 +983,7 @@
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="generateKMeansButton" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="443" max="32767" attributes="0"/>
+                                      <EmptySpace pref="410" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -949,7 +1089,7 @@
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="generateButtonGaussian" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace pref="495" max="32767" attributes="0"/>
+                                      <EmptySpace pref="460" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                             </DimensionLayout>
@@ -1036,7 +1176,7 @@
                         <Component class="javax.swing.JComboBox" name="unsupervisedComboBox">
                           <Properties>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;K-Means&quot;, &quot;Gaussian Mixutre&quot;, &quot;Unsupervised1&quot;, &quot;Unsupervised2&quot;, &quot;Unsupervised3&quot; })" type="code"/>
+                              <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(new String[] { &quot;K-Means&quot;, &quot;Gaussian Mixutre&quot;})" type="code"/>
                             </Property>
                           </Properties>
                           <AuxValues>
@@ -1072,7 +1212,7 @@
                     </DimensionLayout>
                     <DimensionLayout dim="1">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <EmptySpace min="0" pref="722" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="697" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                   </Layout>
